[gd_scene load_steps=2 format=3 uid="uid://de1vb8lsqh5ki"]

[ext_resource type="Script" uid="uid://c5eyxrjroeklq" path="res://src/ui/menus/LevelCard.gd" id="1_8fq3g"]

[node name="LevelCard" type="AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ratio = 0.83
script = ExtResource("1_8fq3g")

[node name="CardBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.18, 0.25, 0.95)

[node name="CardBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.25, 0.35, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LevelGraphic" type="Label" parent="VBox"]
layout_mode = 2
text = "ðŸ”®"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelName" type="Label" parent="VBox"]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LockOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LockBackground" type="ColorRect" parent="LockOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="LockIcon" type="Label" parent="LockOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "ðŸ”’"
horizontal_alignment = 1
vertical_alignment = 1
